Project ReConnectMindHealth_TelehealthBookingDomain {
  database_type: "MySQL"
  Note: "Lược đồ CSDL miền đặt lịch telehealth và quản lý khung giờ"
}

Table therapist_profiles {
  user_id uuid [pk]
  full_name varchar(255)
  meeting_link varchar(500)
}

Table patient_profiles {
  user_id uuid [pk]
  therapist_id uuid [ref: > therapist_profiles.user_id]
  nickname varchar(255)
}

Table appointments {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  therapist_id uuid [not null, ref: > therapist_profiles.user_id]
  start_at datetime
  end_at datetime
  purpose varchar(50)
  status varchar(32)
  is_anonymous bool
  duration_minutes int
  notes text
}

Table therapist_schedule_slots {
  id uuid [pk]
  therapist_id uuid [not null, ref: > therapist_profiles.user_id]
  slot_date date
  start_time time
  end_time time
  is_open bool
}

Table therapist_weekly_schedule_slots {
  id uuid [pk]
  therapist_id uuid [not null, ref: > therapist_profiles.user_id]
  day_of_week varchar(16)
  start_time time
  end_time time
  is_open bool
}
